--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4      0.000000   399.421926  177532.206618       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 33s\n"
+      "Wall time: 1min 21s\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "1483"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "    # company = Reshape((-1, 32))(company)\n",
     "\n",
     "    type_l_input = Input(shape=(1,), dtype=tf.float32, name=\"type_data\")\n",
-    "    type_l = Embedding(5, 8)(type_l_input)\n",
+    "    type_l = Embedding(6, 8)(type_l_input)\n",
     "    # type_l = Reshape((-1, 8))(type_l)\n",
     "\n",
     "    geo_input = Input(shape=(1,), dtype=tf.float32, name=\"geo_data\")\n",
@@ -304,7 +304,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "numeric_data (InputLayer)       [(None, 5)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_7 (Dense)                 (None, 32)           192         numeric_data[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_4 (BatchNor (None, 32)           128         dense_7[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_8 (Dense)                 (None, 32)           1056        batch_normalization_4[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "company_data (InputLayer)       [(None, 1)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "geo_data (InputLayer)           [(None, 1)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_5 (BatchNor (None, 32)           128         dense_8[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_3 (Embedding)         (None, 1, 64)        94976       company_data[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "type_data (InputLayer)          [(None, 1)]          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_5 (Embedding)         (None, 1, 32)        9600        geo_data[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "reshape_1 (Reshape)             (None, 1, 32)        0           batch_normalization_5[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_9 (Dense)                 (None, 1, 32)        2080        embedding_3[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_4 (Embedding)         (None, 1, 8)         48          type_data[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_10 (Dense)                (None, 1, 32)        1056        embedding_5[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 1, 104)       0           reshape_1[0][0]                  \n",
+      "                                                                 dense_9[0][0]                    \n",
+      "                                                                 embedding_4[0][0]                \n",
+      "                                                                 dense_10[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_11 (Dense)                (None, 1, 64)        6720        concatenate_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_6 (BatchNor (None, 1, 64)        256         dense_11[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_12 (Dense)                (None, 1, 64)        4160        batch_normalization_6[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_7 (BatchNor (None, 1, 64)        256         dense_12[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_13 (Dense)                (None, 1, 1)         65          batch_normalization_7[0][0]      \n",
+      "==================================================================================================\n",
+      "Total params: 120,721\n",
+      "Trainable params: 120,337\n",
+      "Non-trainable params: 384\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -321,34 +388,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 128\n",
-    "AUTO = tf.data.experimental.AUTOTUNE\n",
+    "\n",
     "train_dataset = (\n",
     "    tf.data.Dataset\n",
-    "    .from_tensor_slices(({\"numeric_data\": X_train[numeric_cols].values, \"company_data\": X_train.company.values, \n",
-    "                          \"type_data\": X_train.type.values, \"geo_data\": X_train.geo.values}, y_train))\n",
+    "    .from_tensor_slices(({\"numeric_data\": X_train[numeric_cols].values, \n",
+    "                          \"company_data\": X_train.company.values, \n",
+    "                          \"type_data\": X_train.type.values, \n",
+    "                          \"geo_data\": X_train.geo.values}, y_train))\n",
     "    .shuffle(2048)\n",
     "    .batch(BATCH_SIZE)\n",
-    "    .prefetch(AUTO)\n",
     ")\n",
     "\n",
     "valid_dataset = (\n",
     "    tf.data.Dataset\n",
-    "    .from_tensor_slices(({\"numeric_data\": X_valid[numeric_cols].values, \"company_data\": X_valid.company.values, \n",
-    "                          \"type_data\": X_valid.type.values, \"geo_data\": X_valid.geo.values}, y_valid))\n",
+    "    .from_tensor_slices(({\"numeric_data\": X_valid[numeric_cols].values, \n",
+    "                          \"company_data\": X_valid.company.values, \n",
+    "                          \"type_data\": X_valid.type.values, \n",
+    "                          \"geo_data\": X_valid.geo.values}, y_valid))\n",
     "    .batch(BATCH_SIZE)\n",
-    "    .cache()\n",
-    "    .prefetch(AUTO)\n",
+    "\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,28 +431,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m   1181\u001b[0m                 _r=1):\n\u001b[0;32m   1182\u001b[0m               \u001b[0mcallbacks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_train_batch_begin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1183\u001b[1;33m               \u001b[0mtmp_logs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1184\u001b[0m               \u001b[1;32mif\u001b[0m \u001b[0mdata_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshould_sync\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1185\u001b[0m                 \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masync_wait\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\eager\\def_function.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    887\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    888\u001b[0m       \u001b[1;32mwith\u001b[0m \u001b[0mOptionalXlaContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_jit_compile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 889\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    890\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    891\u001b[0m       \u001b[0mnew_tracing_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexperimental_get_tracing_count\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\eager\\def_function.py\u001b[0m in \u001b[0;36m_call\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    915\u001b[0m       \u001b[1;31m# In this case we have created variables on the first call, so we run the\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    916\u001b[0m       \u001b[1;31m# defunned version which is guaranteed to never create variables.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 917\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_stateless_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# pylint: disable=not-callable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    918\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_stateful_fn\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    919\u001b[0m       \u001b[1;31m# Release the lock early so that multiple threads can perform the call\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+      "Epoch 1/10\n",
+      "1125/1125 [==============================] - 6s 3ms/step - loss: 0.5962 - accuracy: 0.6895 - val_loss: 0.4975 - val_accuracy: 0.7671\n",
+      "Epoch 2/10\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4956 - accuracy: 0.7624 - val_loss: 0.4710 - val_accuracy: 0.7716\n",
+      "Epoch 3/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4775 - accuracy: 0.7661 - val_loss: 0.4590 - val_accuracy: 0.7749\n",
+      "Epoch 4/10\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4672 - accuracy: 0.7670 - val_loss: 0.4514 - val_accuracy: 0.7742\n",
+      "Epoch 5/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4610 - accuracy: 0.7695 - val_loss: 0.4467 - val_accuracy: 0.7745\n",
+      "Epoch 6/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4563 - accuracy: 0.7696 - val_loss: 0.4435 - val_accuracy: 0.7748\n",
+      "Epoch 7/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4534 - accuracy: 0.7697 - val_loss: 0.4409 - val_accuracy: 0.7749\n",
+      "Epoch 8/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4504 - accuracy: 0.7708 - val_loss: 0.4394 - val_accuracy: 0.7757\n",
+      "Epoch 9/10\n",
+      "1125/1125 [==============================] - 5s 4ms/step - loss: 0.4489 - accuracy: 0.7713 - val_loss: 0.4381 - val_accuracy: 0.7757\n",
+      "Epoch 10/10\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4483 - accuracy: 0.7707 - val_loss: 0.4372 - val_accuracy: 0.7764\n",
+      "Wall time: 39.1 s\n"
      ]
     }
    ],
@@ -401,32 +476,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 0s 1ms/step\n"
+      "313/313 [==============================] - 1s 2ms/step\n"
      ]
     }
    ],
    "source": [
     "test_dataset = (\n",
     "    tf.data.Dataset\n",
-    "    .from_tensor_slices(({\"numeric_data\": test_df[numeric_cols].values, \"company_data\": test_df.company.values, \n",
-    "                          \"type_data\": test_df.type.values, \"geo_data\": test_df.geo.values}, test_df.target))\n",
+    "    .from_tensor_slices(({\"numeric_data\": test_df[numeric_cols].values, \n",
+    "                          \"company_data\": test_df.company.values, \n",
+    "                          \"type_data\": test_df.type.values, \n",
+    "                          \"geo_data\": test_df.geo.values}))\n",
     "    .batch(BATCH_SIZE)\n",
-    "    .cache()\n",
-    "    #.prefetch(AUTO)\n",
     ")\n",
     "predictions = model.predict(test_dataset, verbose=1).argmax(axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -435,44 +510,13 @@
        "0.40665"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(predictions, test_df.target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        0\n",
-       "1        0\n",
-       "2        0\n",
-       "3        0\n",
-       "4        0\n",
-       "        ..\n",
-       "39995    0\n",
-       "39996    0\n",
-       "39997    0\n",
-       "39998    0\n",
-       "39999    4\n",
-       "Name: company, Length: 40000, dtype: int64"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df.company"
+    "accuracy_score(test_df.target.values, predictions.reshape(-1))"
    ]
   }
  ],
