--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4      0.000000   399.421926  177532.206618       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,21 +172,19 @@
     "    df = df.drop(columns=df.columns[0])\n",
     "    mask = df['company'].value_counts()\n",
     "    df['company'] = np.where(df['company'].isin(mask.index[mask>=10]), df.company, -1)\n",
-    "    df['geo'] = KMeans(n_clusters=300, random_state=42).fit_predict(df[['latitude', 'longitude']])\n",
-    "    df = df.drop(columns=['latitude', 'longitude'])\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 21s\n"
+      "Wall time: 42.9 ms\n"
      ]
     }
    ],
@@ -194,6 +192,17 @@
     "%%time\n",
     "train_df = transform_df(train_df)\n",
     "test_df = transform_df(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = KMeans(n_clusters=300, random_state=42)\n",
+    "train_df['geo'] = km.fit_predict(train_df[['latitude', 'longitude']])\n",
+    "test_df['geo'] = km.predict(test_df[['latitude', 'longitude']])"
    ]
   },
   {
@@ -221,26 +230,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1483"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df.company.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_valid, y_train, y_valid = train_test_split(train_df.drop('target', axis=1), \n",
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,59 +293,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
       "numeric_data (InputLayer)       [(None, 5)]          0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_7 (Dense)                 (None, 32)           192         numeric_data[0][0]               \n",
+      "dense (Dense)                   (None, 32)           192         numeric_data[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_4 (BatchNor (None, 32)           128         dense_7[0][0]                    \n",
+      "batch_normalization (BatchNorma (None, 32)           128         dense[0][0]                      \n",
       "__________________________________________________________________________________________________\n",
-      "dense_8 (Dense)                 (None, 32)           1056        batch_normalization_4[0][0]      \n",
+      "dense_1 (Dense)                 (None, 32)           1056        batch_normalization[0][0]        \n",
       "__________________________________________________________________________________________________\n",
       "company_data (InputLayer)       [(None, 1)]          0                                            \n",
       "__________________________________________________________________________________________________\n",
       "geo_data (InputLayer)           [(None, 1)]          0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_5 (BatchNor (None, 32)           128         dense_8[0][0]                    \n",
+      "batch_normalization_1 (BatchNor (None, 32)           128         dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_3 (Embedding)         (None, 1, 64)        94976       company_data[0][0]               \n",
+      "embedding (Embedding)           (None, 1, 64)        94976       company_data[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "type_data (InputLayer)          [(None, 1)]          0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_5 (Embedding)         (None, 1, 32)        9600        geo_data[0][0]                   \n",
+      "embedding_2 (Embedding)         (None, 1, 32)        9600        geo_data[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "reshape_1 (Reshape)             (None, 1, 32)        0           batch_normalization_5[0][0]      \n",
+      "reshape (Reshape)               (None, 1, 32)        0           batch_normalization_1[0][0]      \n",
       "__________________________________________________________________________________________________\n",
-      "dense_9 (Dense)                 (None, 1, 32)        2080        embedding_3[0][0]                \n",
+      "dense_2 (Dense)                 (None, 1, 32)        2080        embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_4 (Embedding)         (None, 1, 8)         48          type_data[0][0]                  \n",
+      "embedding_1 (Embedding)         (None, 1, 8)         48          type_data[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_10 (Dense)                (None, 1, 32)        1056        embedding_5[0][0]                \n",
+      "dense_3 (Dense)                 (None, 1, 32)        1056        embedding_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 1, 104)       0           reshape_1[0][0]                  \n",
-      "                                                                 dense_9[0][0]                    \n",
-      "                                                                 embedding_4[0][0]                \n",
-      "                                                                 dense_10[0][0]                   \n",
+      "concatenate (Concatenate)       (None, 1, 104)       0           reshape[0][0]                    \n",
+      "                                                                 dense_2[0][0]                    \n",
+      "                                                                 embedding_1[0][0]                \n",
+      "                                                                 dense_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_11 (Dense)                (None, 1, 64)        6720        concatenate_1[0][0]              \n",
+      "dense_4 (Dense)                 (None, 1, 64)        6720        concatenate[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_6 (BatchNor (None, 1, 64)        256         dense_11[0][0]                   \n",
+      "batch_normalization_2 (BatchNor (None, 1, 64)        256         dense_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_12 (Dense)                (None, 1, 64)        4160        batch_normalization_6[0][0]      \n",
+      "dense_5 (Dense)                 (None, 1, 64)        4160        batch_normalization_2[0][0]      \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_7 (BatchNor (None, 1, 64)        256         dense_12[0][0]                   \n",
+      "batch_normalization_3 (BatchNor (None, 1, 64)        256         dense_5[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_13 (Dense)                (None, 1, 1)         65          batch_normalization_7[0][0]      \n",
+      "dense_6 (Dense)                 (None, 1, 1)         65          batch_normalization_3[0][0]      \n",
       "==================================================================================================\n",
       "Total params: 120,721\n",
       "Trainable params: 120,337\n",
@@ -371,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -439,26 +428,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1125/1125 [==============================] - 6s 3ms/step - loss: 0.5962 - accuracy: 0.6895 - val_loss: 0.4975 - val_accuracy: 0.7671\n",
+      "1125/1125 [==============================] - 5s 3ms/step - loss: 0.6241 - accuracy: 0.6703 - val_loss: 0.5046 - val_accuracy: 0.7481\n",
       "Epoch 2/10\n",
-      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4956 - accuracy: 0.7624 - val_loss: 0.4710 - val_accuracy: 0.7716\n",
+      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4972 - accuracy: 0.7550 - val_loss: 0.4697 - val_accuracy: 0.7683\n",
       "Epoch 3/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4775 - accuracy: 0.7661 - val_loss: 0.4590 - val_accuracy: 0.7749\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4770 - accuracy: 0.7604 - val_loss: 0.4567 - val_accuracy: 0.7710\n",
       "Epoch 4/10\n",
-      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4672 - accuracy: 0.7670 - val_loss: 0.4514 - val_accuracy: 0.7742\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4665 - accuracy: 0.7651 - val_loss: 0.4487 - val_accuracy: 0.7721\n",
       "Epoch 5/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4610 - accuracy: 0.7695 - val_loss: 0.4467 - val_accuracy: 0.7745\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4598 - accuracy: 0.7649 - val_loss: 0.4438 - val_accuracy: 0.7735\n",
       "Epoch 6/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4563 - accuracy: 0.7696 - val_loss: 0.4435 - val_accuracy: 0.7748\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4554 - accuracy: 0.7655 - val_loss: 0.4400 - val_accuracy: 0.7740\n",
       "Epoch 7/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4534 - accuracy: 0.7697 - val_loss: 0.4409 - val_accuracy: 0.7749\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4515 - accuracy: 0.7674 - val_loss: 0.4374 - val_accuracy: 0.7748\n",
       "Epoch 8/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4504 - accuracy: 0.7708 - val_loss: 0.4394 - val_accuracy: 0.7757\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4501 - accuracy: 0.7682 - val_loss: 0.4355 - val_accuracy: 0.7746\n",
       "Epoch 9/10\n",
-      "1125/1125 [==============================] - 5s 4ms/step - loss: 0.4489 - accuracy: 0.7713 - val_loss: 0.4381 - val_accuracy: 0.7757\n",
+      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4475 - accuracy: 0.7687 - val_loss: 0.4344 - val_accuracy: 0.7752\n",
       "Epoch 10/10\n",
-      "1125/1125 [==============================] - 3s 3ms/step - loss: 0.4483 - accuracy: 0.7707 - val_loss: 0.4372 - val_accuracy: 0.7764\n",
-      "Wall time: 39.1 s\n"
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4462 - accuracy: 0.7695 - val_loss: 0.4334 - val_accuracy: 0.7757\n",
+      "Wall time: 37.2 s\n"
      ]
     }
    ],
@@ -476,14 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 2ms/step\n"
+      "313/313 [==============================] - 1s 1ms/step\n"
      ]
     }
    ],
@@ -501,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +499,7 @@
        "0.40665"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
