--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -18,12 +18,22 @@
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from tensorflow import one_hot\n",
-    "from tensorflow.keras.utils import plot_model"
+    "from tensorflow.keras.utils import plot_model\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_cols = ['fin_1', 'fin_2', 'fin_3', 'fin_4', 'is_local']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +260,7 @@
        "[160001 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,18 +273,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = train_df['company'].value_counts()\n",
-    "train_df['company'] = np.where(train_df['company'].isin(mask.index[mask>=10]), train_df.company, -1)\n",
-    "test_df['company'] = np.where(test_df['company'].isin(mask.index[mask>=10]), test_df.company, -1)"
+    "scaler = StandardScaler()\n",
+    "scaler.fit(train_df[numeric_cols])\n",
+    "train_df[numeric_cols] = scaler.transform(train_df[numeric_cols])\n",
+    "test_df[numeric_cols] = scaler.transform(test_df[numeric_cols])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = train_df['company'].value_counts()\n",
+    "train_df['company'] = np.where(train_df['company'].isin(mask.index[mask>10]), train_df.company, -1)\n",
+    "test_df['company'] = np.where(test_df['company'].isin(mask.index[mask>10]), test_df.company, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.91 ms\n"
+      "Wall time: 18 ms\n"
      ]
     }
    ],
@@ -304,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,16 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numeric_cols = ['fin_1', 'fin_2', 'fin_3', 'fin_4', 'is_local']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +442,7 @@
       "__________________________________________________________________________________________________\n",
       "batch_normalization_1 (BatchNor (None, 32)           128         dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "embedding (Embedding)           (None, 1, 128)       189952      company_data[0][0]               \n",
+      "embedding (Embedding)           (None, 1, 128)       177280      company_data[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "embedding_1 (Embedding)         (None, 1, 16)        80          type_data[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
@@ -458,8 +471,8 @@
       "__________________________________________________________________________________________________\n",
       "dense_7 (Dense)                 (None, 1, 1)         65          batch_normalization_3[0][0]      \n",
       "==================================================================================================\n",
-      "Total params: 250,433\n",
-      "Trainable params: 250,049\n",
+      "Total params: 237,761\n",
+      "Trainable params: 237,377\n",
       "Non-trainable params: 384\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -471,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +494,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,12 +542,15 @@
     "    save_weights_only=True,\n",
     "    monitor='val_accuracy',\n",
     "    mode='max',\n",
-    "    save_best_only=True)"
+    "    save_best_only=True)\n",
+    "\n",
+    "reduce_lr =  tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2,\n",
+    "                              patience=1, min_lr=1e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -542,26 +558,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1125/1125 [==============================] - 6s 3ms/step - loss: 0.5526 - accuracy: 0.7238 - val_loss: 0.4908 - val_accuracy: 0.7667\n",
+      "1125/1125 [==============================] - 6s 3ms/step - loss: 0.6828 - accuracy: 0.6393 - val_loss: 0.5070 - val_accuracy: 0.7492\n",
       "Epoch 2/10\n",
-      "1125/1125 [==============================] - 5s 5ms/step - loss: 0.4891 - accuracy: 0.7630 - val_loss: 0.4708 - val_accuracy: 0.7703\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4962 - accuracy: 0.7528 - val_loss: 0.4662 - val_accuracy: 0.7686\n",
       "Epoch 3/10\n",
-      "1125/1125 [==============================] - 5s 4ms/step - loss: 0.4741 - accuracy: 0.7663 - val_loss: 0.4593 - val_accuracy: 0.7716\n",
+      "1125/1125 [==============================] - 5s 5ms/step - loss: 0.4719 - accuracy: 0.7622 - val_loss: 0.4514 - val_accuracy: 0.7718\n",
       "Epoch 4/10\n",
-      "1125/1125 [==============================] - 5s 4ms/step - loss: 0.4643 - accuracy: 0.7683 - val_loss: 0.4513 - val_accuracy: 0.7741\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4602 - accuracy: 0.7652 - val_loss: 0.4433 - val_accuracy: 0.7741\n",
       "Epoch 5/10\n",
-      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4574 - accuracy: 0.7696 - val_loss: 0.4456 - val_accuracy: 0.7753\n",
+      "1125/1125 [==============================] - 5s 4ms/step - loss: 0.4530 - accuracy: 0.7670 - val_loss: 0.4382 - val_accuracy: 0.7737\n",
       "Epoch 6/10\n",
-      "1125/1125 [==============================] - 5s 5ms/step - loss: 0.4524 - accuracy: 0.7706 - val_loss: 0.4417 - val_accuracy: 0.7753\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4479 - accuracy: 0.7677 - val_loss: 0.4347 - val_accuracy: 0.7745\n",
       "Epoch 7/10\n",
-      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4489 - accuracy: 0.7714 - val_loss: 0.4391 - val_accuracy: 0.7752\n",
+      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4441 - accuracy: 0.7691 - val_loss: 0.4321 - val_accuracy: 0.7736\n",
       "Epoch 8/10\n",
-      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4463 - accuracy: 0.7720 - val_loss: 0.4373 - val_accuracy: 0.7746\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4412 - accuracy: 0.7699 - val_loss: 0.4300 - val_accuracy: 0.7739\n",
       "Epoch 9/10\n",
-      "1125/1125 [==============================] - 4s 4ms/step - loss: 0.4444 - accuracy: 0.7724 - val_loss: 0.4360 - val_accuracy: 0.7745\n",
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4389 - accuracy: 0.7705 - val_loss: 0.4284 - val_accuracy: 0.7741\n",
       "Epoch 10/10\n",
-      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4428 - accuracy: 0.7727 - val_loss: 0.4351 - val_accuracy: 0.7760\n",
-      "Wall time: 46.4 s\n"
+      "1125/1125 [==============================] - 4s 3ms/step - loss: 0.4371 - accuracy: 0.7713 - val_loss: 0.4272 - val_accuracy: 0.7746\n",
+      "Wall time: 47.4 s\n"
      ]
     }
    ],
@@ -585,7 +601,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x26092ae0ca0>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x1ca48032c70>"
       ]
      },
      "execution_count": 18,
@@ -606,7 +622,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1250/1250 [==============================] - 2s 1ms/step - loss: 0.4706 - accuracy: 0.7640\n"
+      "1250/1250 [==============================] - 2s 2ms/step - loss: 0.4368 - accuracy: 0.7700\n"
      ]
     }
    ],
