--- a/hw3/hw3_task1.ipynb
+++ b/hw3/hw3_task1.ipynb
@@ -39803,6 +39803,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2672,) (27,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.shape, test.shape)\n",
+    "# будем предсказывать спрос на следующий месяц для тестирования модели, \n",
+    "# ибо с точки зрения бизнес-задач именно такой промежуток выглядит наиболее типичным"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -39819,6 +39838,8 @@
    ],
    "source": [
     "sarimax = SARIMAX(train, order=(4, 1, 6),seasonal_order=(1,1,1,7),enforce_stationarity=False,enforce_invertibility=False)\n",
+    "# на графике достаточно очевидные сезонные паттерны, с окном примерно в неделю, нам бы хотелось их улавливать, поэтому\n",
+    "# используем модель SARIMA\n",
     "history = sarimax.fit()\n",
     "forecasts = history.forecast(steps=len(test))"
    ]
@@ -40885,7 +40906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -40899,7 +40920,10 @@
    ],
    "source": [
     "print('SARIMA RMSE:', np.sqrt(mean_squared_error(test, forecasts)))\n",
-    "print('Exp smoothing RMSE:', np.sqrt(mean_squared_error(test, forecasts_es)))"
+    "print('Exp smoothing RMSE:', np.sqrt(mean_squared_error(test, forecasts_es)))\n",
+    "# Метрика MSE в принципе достаточно чувствительна к выбросам, поэтому если модель\n",
+    "# будет плохо улавливать сезонные спайки, мы бы хотели об этом знать. Берем корень, \n",
+    "# потому что работаем с достаточно большими значениями"
    ]
   },
   {
